# jp-ocr-evaluation

./: .env.sample  .gitignore  README.md  pyproject.toml
data/: result_without_ruby_by_document_ai.txt
notes/: jp_text_with_ruby_by_claude3.ipynb  jp_text_with_ruby_by_document_ai.ipynb  jp_text_with_ruby_by_easyocr.ipynb  jp_text_with_ruby_by_gpt4v.ipynb  jp_text_without_ruby_by_claude3.ipynb  jp_text_without_ruby_by_document_ai.ipynb  jp_text_without_ruby_by_easyocr.ipynb  remove_ruby_by_opencv-1.ipynb  remove_ruby_by_opencv-2.ipynb
