[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["yoshino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.4"
python-dotenv = "^1.0.1"
google-cloud-documentai = "^2.24.1"
openai = "^1.13.3"
anthropic = "^0.19.1"
easyocr = "^1.7.1"
opencv-python = "^4.9.0.80"
pillow = "^10.2.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
